# portfolio

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pushupdate.sh  wasm-notes.md
client/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
client/src/: App.svelte  app.css  app.html  gruvbox.css  wasm-loader.js
client/src/lib/: Bio.svelte  Counter.svelte  Header.svelte  Hero.svelte  Links.svelte  Marquee.svelte  NameCard.svelte  NavBar.svelte  NavMenu.svelte  ThemeSelector.svelte
client/src/routes/: +layout.svelte  +page.svelte  Links.svelte
client/src/routes/about/: +page.svelte
client/src/routes/blog/: +page.svelte
client/src/routes/blog/[slug]/: +page.server.js  +page.svelte
client/src/routes/demos/: +page.svelte
client/src/routes/demos/budget/: +page.svelte  Demo.svelte
client/src/routes/projects/: +page.svelte
client/src/routes/projects/budget/: +page.svelte  Demo.svelte
server/: Cargo.toml  build.rs
server/src/: main.rs  redirects.rs
server/src/api/: blog.rs  mod.rs
server/src/services/: mod.rs  redirects.rs
wasm/: Cargo.toml  bacon.toml
wasm/src/: lib.rs
