[package]
name = "server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async = "0.0.0"
axum = { version = "0.8.4", features = ["macros"] }
cached = { version = "0.59.0", features = ["serde"] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["client", "tokio", "http1", "tracing"] }
pulldown-cmark = "0.13.3"
quick_cache = "0.6.21"
reqwest = { version = "0.13.3", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "1.1.2"
tower-http = { version = "0.6.6", features = ["fs","trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
build-rs = "0.3.3"
snafu = "0.9.0"
toml = "1.1.2"
